--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -371,10 +371,18 @@ parse as list operators.  (In other words, a named unary operator
 may be declared to take extra arguments only if they are named-only
 arguments.)
 
-=item * The C<&&> and C<||> operators are smarter about list context and
-return C<()> on failure in list context rather than C<Bool::False>.  Note
-that this applies only to the left argument--the right argument is always
-returned verbatim if the left succeeds.
+=item * The C<&&> and C<||> operators are smarter about list context
+and return C<()> on failure in list context rather than C<Bool::False>.
+The operators still short-circuit, but if either operator would return
+a false value, it is converted to the null list in list context so
+that the false results are self-deleting.  (If this self-deleting
+behavior is not desired, put the expression into item context rather
+than list context.)  This self-deletion is a behavior of the operators
+themselves, not a general property of boolean values in list context, so
+
+    @foo = true($a||$b);
+
+is guaranteed to insert exactly one boolean value into C<@foo>.
 
 =back
 
