Obsoleted block initializer syntax. Mention div and mod.
git-svn-id: http://svn.pugscode.org/pugs@23692 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -1985,7 +1985,7 @@ Perl 6 has 22 precedence levels (which is fewer than Perl 5):
     autoincrement       ++ --
     exponentiation      **
     symbolic unary      ! + - ~ ? $ @ % & | +^ ~^ ?^ \ ^ =
-    multiplicative      * / % x xx +& +< +> ~& ~< ~> ?&
+    multiplicative      * / % x xx +& +< +> ~& ~< ~> ?& div mod
     additive            + - ~ +| +^ ~| ~^ ?| ?^
     junctive and (all)  &
     junctive or (any)   | ^
